# yajnavalkya

./: .gitignore  .gitmodules  CMakeLists.txt  YVBLSRussiaPortugalAPI.cpp  YVBLSRussiaPortugalAPI.h  YVContentChecker.cpp  YVContentChecker.h  YVHTTPRequest.cpp  YVHTTPRequest.h  YVHTTPRequestService.cpp  YVHTTPRequestService.h  YVIMAPClient.cpp  YVIMAPClient.h  YVSSLSocket.cpp  YVSSLSocket.h  YVScheduleService.cpp  YVScheduleService.h  YVTelegramBotAPI.cpp  YVTelegramBotAPI.h  YVTools.cpp  YVTools.h  YVVerificationCode.cpp  YVVerificationCode.h  build.sh  clean.sh  deploy.sh  yajnavalkya  yajnavalkya.cpp
